Add report of data analysis

--- a/notebooks/data_analysis.ipynb
+++ b/notebooks/data_analysis.ipynb
@@ -20,7 +20,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 42,
    "metadata": {
     "pycharm": {
      "name": "#%%\n"
@@ -43,69 +43,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 43,
    "metadata": {
     "pycharm": {
      "name": "#%%\n"
     }
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "root\n",
-      " |-- bbox: array (nullable = true)\n",
-      " |    |-- element: double (containsNull = true)\n",
-      " |-- features: array (nullable = true)\n",
-      " |    |-- element: struct (containsNull = true)\n",
-      " |    |    |-- geometry: struct (nullable = true)\n",
-      " |    |    |    |-- coordinates: array (nullable = true)\n",
-      " |    |    |    |    |-- element: double (containsNull = true)\n",
-      " |    |    |    |-- type: string (nullable = true)\n",
-      " |    |    |-- id: string (nullable = true)\n",
-      " |    |    |-- properties: struct (nullable = true)\n",
-      " |    |    |    |-- alert: string (nullable = true)\n",
-      " |    |    |    |-- cdi: double (nullable = true)\n",
-      " |    |    |    |-- code: string (nullable = true)\n",
-      " |    |    |    |-- detail: string (nullable = true)\n",
-      " |    |    |    |-- dmin: double (nullable = true)\n",
-      " |    |    |    |-- felt: long (nullable = true)\n",
-      " |    |    |    |-- gap: double (nullable = true)\n",
-      " |    |    |    |-- ids: string (nullable = true)\n",
-      " |    |    |    |-- mag: double (nullable = true)\n",
-      " |    |    |    |-- magType: string (nullable = true)\n",
-      " |    |    |    |-- mmi: double (nullable = true)\n",
-      " |    |    |    |-- net: string (nullable = true)\n",
-      " |    |    |    |-- nst: long (nullable = true)\n",
-      " |    |    |    |-- place: string (nullable = true)\n",
-      " |    |    |    |-- rms: double (nullable = true)\n",
-      " |    |    |    |-- sig: long (nullable = true)\n",
-      " |    |    |    |-- sources: string (nullable = true)\n",
-      " |    |    |    |-- status: string (nullable = true)\n",
-      " |    |    |    |-- time: long (nullable = true)\n",
-      " |    |    |    |-- title: string (nullable = true)\n",
-      " |    |    |    |-- tsunami: long (nullable = true)\n",
-      " |    |    |    |-- type: string (nullable = true)\n",
-      " |    |    |    |-- types: string (nullable = true)\n",
-      " |    |    |    |-- tz: string (nullable = true)\n",
-      " |    |    |    |-- updated: long (nullable = true)\n",
-      " |    |    |    |-- url: string (nullable = true)\n",
-      " |    |    |-- type: string (nullable = true)\n",
-      " |-- metadata: struct (nullable = true)\n",
-      " |    |-- api: string (nullable = true)\n",
-      " |    |-- count: long (nullable = true)\n",
-      " |    |-- generated: long (nullable = true)\n",
-      " |    |-- status: long (nullable = true)\n",
-      " |    |-- title: string (nullable = true)\n",
-      " |    |-- url: string (nullable = true)\n",
-      " |-- type: string (nullable = true)\n",
-      "\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "filepath = 'C:/Users/CTW00913-Admin/PycharmProjects/EarthQuake/data/earthquake_raw.json'\n",
+    "filepath = 'data/raw/earthquake_raw.json'\n",
     "\n",
     "raw_df = spark.read\\\n",
     "    .option('multiline', 'true')\\\n",
@@ -117,7 +63,7 @@
     "    .drop('features')\\\n",
     "    .select('Exp_RESULTS.geometry.coordinates',\n",
     "           'Exp_RESULTS.id',\n",
-    "           'Exp_RESULTS.properties.*')\\\n"
+    "           'Exp_RESULTS.properties.*')\n"
    ]
   },
   {
@@ -144,7 +90,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 44,
    "metadata": {
     "pycharm": {
      "name": "#%%\n"
@@ -155,6 +101,37 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "Number of rows: 149\n",
+      "Number of columns: 28\n",
+      "Columns: \n",
+      "coordinates\n",
+      "id\n",
+      "alert\n",
+      "cdi\n",
+      "code\n",
+      "detail\n",
+      "dmin\n",
+      "felt\n",
+      "gap\n",
+      "ids\n",
+      "mag\n",
+      "magType\n",
+      "mmi\n",
+      "net\n",
+      "nst\n",
+      "place\n",
+      "rms\n",
+      "sig\n",
+      "sources\n",
+      "status\n",
+      "time\n",
+      "title\n",
+      "tsunami\n",
+      "type\n",
+      "types\n",
+      "tz\n",
+      "updated\n",
+      "url\n",
       "root\n",
       " |-- coordinates: array (nullable = true)\n",
       " |    |-- element: double (containsNull = true)\n",
@@ -190,19 +167,28 @@
     }
    ],
    "source": [
+    "df_columns = earth_quake_df.columns\n",
+    "\n",
+    "print('Number of rows: ' + str(earth_quake_df.count()) + '\\n' + 'Number of columns: ' + str(len(df_columns)))\n",
+    "print('Columns: ', *df_columns, sep=\"\\n\")\n",
+    "\n",
     "earth_quake_df.printSchema()"
    ]
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%% md\n"
+    }
+   },
    "source": [
     "#### Null Values\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 45,
    "metadata": {
     "pycharm": {
      "name": "#%%\n"
@@ -215,19 +201,19 @@
      "text": [
       "coordinates -> 0\n",
       "id -> 0\n",
-      "alert -> 178\n",
-      "cdi -> 164\n",
+      "alert -> 149\n",
+      "cdi -> 140\n",
       "code -> 0\n",
       "detail -> 0\n",
-      "dmin -> 51\n",
-      "felt -> 164\n",
-      "gap -> 37\n",
+      "dmin -> 49\n",
+      "felt -> 140\n",
+      "gap -> 31\n",
       "ids -> 0\n",
       "mag -> 0\n",
       "magType -> 0\n",
-      "mmi -> 175\n",
+      "mmi -> 148\n",
       "net -> 0\n",
-      "nst -> 55\n",
+      "nst -> 35\n",
       "place -> 0\n",
       "rms -> 0\n",
       "sig -> 0\n",
@@ -238,7 +224,7 @@
       "tsunami -> 0\n",
       "type -> 0\n",
       "types -> 0\n",
-      "tz -> 178\n",
+      "tz -> 149\n",
       "updated -> 0\n",
       "url -> 0\n"
      ]
@@ -263,7 +249,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 46,
    "metadata": {
     "pycharm": {
      "name": "#%%\n"
@@ -283,8 +269,87 @@
     "unique_rows = earth_quake_df.distinct().count()\n",
     "duplicates_rows = total_rows - unique_rows\n",
     "\n",
-    "print(duplicates_rows)\n"
+    "print(duplicates_rows)"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "### Report of Data Analysis\n",
+    "\n",
+    "#### Steps in data transformation\n",
+    "\n",
+    "##### Lowercase in columns content\n",
+    "- All string columns\n",
+    "\n",
+    "##### Rename columns name\n",
+    "- cdi -> max_intensity\n",
+    "- alert -> alert_type\n",
+    "- dmin -> epicenter_horizontal_distance\n",
+    "- felt -> people_felt_earthquake\n",
+    "- gap -> azimuthal_gap\n",
+    "- ids -> earthquake_id\n",
+    "- mag -> magnitude\n",
+    "- magType -> magnitude_type\n",
+    "- nst -> nr_seismic_stations\n",
+    "- rms -> root_mean_square\n",
+    "- sig -> earthquake_impact_estimation\n",
+    "\n",
+    "##### Split column content\n",
+    "- Split array content of coordinates column in new three columns -> longitude, latitude, depth\n",
+    "\n",
+    "##### Replace Null values\n",
+    "- alert -> green\n",
+    "- cdi -> 0.0\n",
+    "- dmin -> 0.0\n",
+    "- gap -> 0.0\n",
+    "- nst -> 0\n",
+    "- felt -> 0\n",
+    "\n",
+    "##### Drop columns\n",
+    "- code\n",
+    "- detail\n",
+    "- mmi\n",
+    "- net\n",
+    "- sources\n",
+    "- title\n",
+    "- types\n",
+    "- tz\n",
+    "\n",
+    "##### Data type convert\n",
+    "- time -> timestamp\n",
+    "- updated -> timestamp\n",
+    "- felt -> integer\n",
+    "- nst -> integer\n",
+    "- sig -> integer\n",
+    "- tsunami -> integer\n",
+    "\n",
+    "\n",
+    "##### Column content transformation\n",
+    "- Convert dmin column degree in kilimeters - > 1 degree is approximately 111.2 km\n",
+    "- Convert magType values in:\n",
+    "    - md -> duration\n",
+    "    - ml -> local\n",
+    "    - ms -> surface wave\n",
+    "    - mw -> w-phase\n",
+    "    - me -> energy\n",
+    "    - mi -> p-wave\n",
+    "    - mb -> short-period body wave\n",
+    "    - mlg -> short-period surface wave"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%% md\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
