Update notebook of data analysis

--- a/notebooks/data_analysis.ipynb
+++ b/notebooks/data_analysis.ipynb
@@ -43,7 +43,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 2,
    "metadata": {
     "pycharm": {
      "name": "#%%\n"
@@ -51,7 +51,7 @@
    },
    "outputs": [],
    "source": [
-    "filepath = 'data/raw/earthquake_raw.json'\n",
+    "filepath = 'earthquake_raw.json'\n",
     "\n",
     "raw_df = spark.read\\\n",
     "    .option('multiline', 'true')\\\n",
@@ -90,7 +90,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 3,
    "metadata": {
     "pycharm": {
      "name": "#%%\n"
@@ -101,7 +101,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Number of rows: 149\n",
+      "Number of rows: 164\n",
       "Number of columns: 28\n",
       "Columns: \n",
       "coordinates\n",
@@ -146,7 +146,7 @@
       " |-- ids: string (nullable = true)\n",
       " |-- mag: double (nullable = true)\n",
       " |-- magType: string (nullable = true)\n",
-      " |-- mmi: double (nullable = true)\n",
+      " |-- mmi: string (nullable = true)\n",
       " |-- net: string (nullable = true)\n",
       " |-- nst: long (nullable = true)\n",
       " |-- place: string (nullable = true)\n",
